--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
