--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.8.1",
     "web-push": "^3.6.7",
-    "whatsapp-web.js": "^1.34.2"
+    "whatsapp-web.js": "^1.34.2",
+    "wwebjs-mongo": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
